ONT-3333 # Fix technology.